--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,6 @@ project(WavPlay)
 set(CMAKE_CXX_STANDARD 17)
 
 add_executable(WavPlay WavPlay/main.cpp)
+if(WIN32)
+    target_compile_options(WavPlay PRIVATE /W4 /WX)
+endif()
